# plover-platform-specific-translation

./: .gitignore  .pylintrc  README.md  pytest.ini  setup.cfg
.github/workflows/: ci.yml  release.yml
plover_platform_specific_translation/: extension.py
plover_platform_specific_translation/config/: __init__.py  actions.py  file.py  loader.py  transformer.py
plover_platform_specific_translation/platform/: __init__.py  parser.py
plover_platform_specific_translation/translation/: __init__.py  resolver.py
src/plover_platform_specific_translation/translation/: resolver.py
test/: justfile
test/config/: conftest.py  test_config.py
test/config/files/: bad_json_data.json  dict_list_non_string_platform_translations.json  dict_non_list_platform_translations.json  non_dict_platform_translations.json  valid_platform_translations.json
test/platform/: test_platform.py
test/translation/: conftest.py  test_translation.py
