[metadata]
author = Paul Fioravanti
author_email = paul@paulfioravanti.com
classifiers =
    Development Status :: 4 - Beta
    Environment :: Plugins
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
description = Define multiple platform (OS) specific translations in a single steno outline.
keywords = plover plover_plugin
license = GNU General Public License v3 or later (GPLv3+)
long_description = file: README.md
long_description_content_type = text/markdown
name = plover_platform_specific_translation
url = https://github.com/paulfioravanti/plover-platform-specific-translation
version = 0.2.3

[options]
install_requires =
    plover >= 4.0.0.dev12
setup_requires =
    setuptools >= 30.3.0
zip_safe = True
packages =
    plover_platform_specific_translation
    plover_platform_specific_translation.config
    plover_platform_specific_translation.platform
    plover_platform_specific_translation.translation

[options.entry_points]
plover.extension =
    plover_platform_specific_translation = plover_platform_specific_translation.extension:PlatformSpecificTranslation

[options.extras_require]
test=
    coverage
    mypy
    pylint
    pytest
    pytest-cov

[tool:pytest]
pythonpath = plover_platform_specific_translation

[mypy]
strict = True

[mypy-plover.*]
ignore_missing_imports = True
